// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/FormListBox With Custom Placeholder 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-14"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      This is a custom placeholder
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <test-file-stub />
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox With Disabled Option 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-18"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Bitte wähle eine Option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <test-file-stub />
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox With Errors 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-error focus:border-error focus:ring-error"
    disabled={false}
    id="headlessui-listbox-button-16"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Bitte wähle eine Option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <test-file-stub />
    </span>
  </button>
  <div
    className="mt-2"
  >
    <p
      className="text-error text-sm"
    >
      This is an error message
    </p>
    <p
      className="text-error text-sm"
    >
      This is another error message
    </p>
  </div>
</div>
`;

exports[`Storyshots Forms/FormListBox With Icons 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-black hover:text-blue border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-12"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      <span
        className="flex items-center gap-2"
      >
        <test-file-stub />
         Second option
      </span>
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <test-file-stub />
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox With Label 1`] = `
<div
  className=" mb-2 relative"
>
  <label
    className="block mb-2 cursor-pointer transition hover:opacity-60"
    id="headlessui-listbox-label-5"
    onClick={[Function]}
  >
    Default label
  </label>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-6"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Bitte wähle eine Option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <test-file-stub />
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox With Selected Default 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-black hover:text-blue border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-10"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Second option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <test-file-stub />
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox Without Label 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-8"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Bitte wähle eine Option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <test-file-stub />
    </span>
  </button>
</div>
`;
